--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'PressStart2P';
-  src: url('../fonts/PressStart2P-Regular.woff2') format('woff2');
+  src: url('./fonts/PressStart2P-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -9,8 +9,8 @@
 @font-face {
   font-family: 'Inter';
   src: 
-    url('../fonts/Inter-Variable.woff2') format('woff2 supports variations'),
-    url('../fonts/Inter-Variable.woff2') format('woff2-variations');
+    url('./fonts/Inter-Variable.woff2') format('woff2 supports variations'),
+    url('./fonts/Inter-Variable.woff2') format('woff2-variations');
   font-weight: 400 785;
   font-style: normal;
   font-display: swap;
