--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@ body {
 
 .page {
   min-inline-size: 320px;
+  width:100%;
+  max-width:700px;
   min-block-size: 100dvb;
   font-family: var(--main-font);
   font-variation-settings: "wght" var(--text-weight);
@@ -17,13 +19,18 @@ body {
   box-sizing: border-box;
 }
 
+.title {
+  font-family: var(--accent-font);
+}
+
 .header_title {
   font-family: var(--accent-font);
-  font-size: var(--logo-font-size);
+  font-size: clamp(3rem, 10vw, var(--logo-font-size));
   line-height: 1;
   margin: 0;
   padding-bottom: 20px;
   text-align: center;
+  word-break: break-all;
 }
 
 .header_subtitle {
@@ -47,7 +54,8 @@ body {
 }
 
 .header.content-section {
-  width: 375px;
+  width: 100%;
+  max-width:700px;
   padding: 122px 16px;
   box-sizing: border-box;
   display: flex;
@@ -80,7 +88,7 @@ body {
   font-size: 18px;
   margin: 0;
   padding: 4px 10px;
-  width: 100%;
+  max-width: 321px;
   display: flex;
   align-items: center;
 }
@@ -89,6 +97,9 @@ body {
   position: relative;
   width: 100%;
   min-height: 371px;
+  border-width: 2px 0 2px 0;
+  border-color: #000;
+  border-style: solid;
 }
 
 .card__label {
@@ -117,14 +128,14 @@ body {
 
 .card__paragraph {
   font-size: clamp(18px, 1.2vw, 24px);
-  padding: 25px 25px 0 25px;
-  width: 100%;
   box-sizing: border-box;
-  margin-bottom: 25px;
+  line-height: 21px;
+  max-width: 321px;
+  padding-bottom:25px;
 }
 
-.card__content:not(:last-of-type) {
-  margin-bottom: 50px;
+.text__content {
+  padding: 25px 25px 0px 25px;
 }
 
 .card__content:last-of-type {
@@ -143,7 +154,6 @@ body {
   width: 100%;
   padding: 0 25px;
   box-sizing: border-box;
-  margin-top: 25px;
 }
 
 .card__icon-button {
@@ -176,7 +186,8 @@ body {
 }
 
 .button:focus-visible {
-  box-shadow: 2px 2px 0 0 #000;
+  outline: 2px solid #000;
+  outline-offset: 2px;
 }
 
 .button::before {
@@ -198,7 +209,6 @@ body {
   mix-blend-mode: difference;
   position: relative;
   z-index: 1;
-  text-transform: uppercase;
   line-height: 1;
 }
 
@@ -215,14 +225,6 @@ body {
   outline: none;
 }
 
-.button:focus {
-  outline: none;
-}
-
-.button:focus-visible {
-  box-shadow: 2px 2px 0 0 #000;
-}
-
 .card__icon-button:focus {
   outline: none;
 }
@@ -235,18 +237,14 @@ body {
   transform: translateX(0);
 }
 
-.save-button .content__icon {
-  color: #fff;
-  fill: #fff;
-  stroke: #fff;
-}
-
 .save-button {
   flex-direction: column;
   gap: 8px;
-  padding: 15px 40px;
   width: 306px;
   height: 84px;
+  color: #fff;
+  fill: #fff;
+  stroke: #fff;
 }
 
 .content__save-button {
@@ -257,12 +255,12 @@ body {
 }
 
 .content__icon {
-  width: 28px;
-  height: 28px;
   position: relative;
   mix-blend-mode: difference;
   z-index: 1;
   fill: #fff;
+  color: #fff;
+  stroke: #fff;
 }
 
 .save-dialog__icon {
@@ -346,6 +344,7 @@ body {
   opacity: 0;
 }
 
+
 @media (min-width: 1440px) {
   .page {
     width: 100%;
@@ -369,11 +368,19 @@ body {
     gap: 50px;
   }
 
+  .card__paragraph {
+    max-width: 646px;
+  }
+
   .card__content {
     width: 100%;
     max-width: 700px;
     margin-inline: auto;
     margin-bottom: 0;
+  }
+
+  .card_content__title {
+  max-width: 676px;
   }
 
   .card__content:last-of-type {
