--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,10 +2,10 @@
   --main-font:
     "Inter", system-ui, -apple-system, "Segoe UI", Roboto, Arial, sans-serif;
   --accent-font:
-    "Press Start 2P", system-ui, -apple-system, "Segoe UI", Roboto, Arial,
+    "PressStart2P-Regular", system-ui, -apple-system, "Segoe UI", Roboto, Arial,
     sans-serif;
-  --text-weight: 400;
-  --title-weight: 700;
+  --text-weight: 410;
+  --title-weight: 400;
   --container-width: clamp(375px, 100%, 700px);
   --logo-font-size: clamp(49px, 13.06vw, 64px);
   --subtitle-font-size: clamp(14px, 3.73vw, 20px);
